Add function that add create display table for the books

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="stayl.css">
 </head>
 <body>
-    
+    <h2 style="text-align: center;">My Library</h2>
+    <div id="bookTableContainer"></div>
 </body>
 </html>
